--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -19,7 +19,19 @@
     flex-direction: column;
     gap: 1rem;
   }
-  
+  .logout-button {
+  margin-top: 20px;
+  background-color: #c62828;
+  color: white;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+  .logout-button:hover {
+  background-color: #b71c1c;
+}
   .card a button {
     padding: 0.8rem 1.5rem;
     background-color: #232157;
